# bitcoin-forecast-automation

./: .dockerignore  .dvcignore  Dockerfile  Dockerfile_API  Dockerfile_Client  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/: okteto.yml
.github/workflows/: MLOps_pipeline  MLOps_pipeline copy.yml  MLOps_pipeline.txt  MLOps_pipeline.yml  fetch_data.yml  train_model.txt  train_model.yml
data/: .gitignore  current_data.csv.dvc  metrics.csv.dvc  reference_data.csv  reference_data.csv.dvc
data/predictions/: .gitignore  future_data.csv.dvc
data/raw/: raw_data.csv.dvc
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml  run_my_checkpoint.py
great_expectations/expectations/: .ge_store_backend_id  my_suite.json
mlruns/0/: meta.yaml
src/client/: package-lock.json  package.json
src/client/public/: index.html
src/client/src/views/: home.css  home.js
src/data/: evidently.py  evidently_file.py  fetch_data.py
src/models/: train_model.py
src/reports/: file.html
src/serve/: api.py
