[tool.poetry]
name = "bitcoin-forecast-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bitcoin_forecast_automation"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
cryptocmd = "^0.6.1"
dvc = "^2.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
