[tool.poetry]
name = "bitcoin-forecast-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bitcoin_forecast_automation"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
cryptocmd = "^0.6.1"
dvc = "^2.55.0"
flask = "^2.2.3"
scikit-learn = "^1.2.1"
pytest = "^7.2.1"
requests = "^2.28.2"
flask-cors = "^3.0.10"
great-expectations = "^0.16.1"
evidently = "^0.3.2.1"
numpy = "1.23.5"
mlflow = "^2.2.2"
black = "^23.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
